* Reduce offset when no search result
* Use tab name in CSV Export/Import
* Add support for plugins
* Add drag & drop support on attachment button

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Prevent similar tab
* Remove dialog for input file
* Use dropdown for attachment
* Manage icons in input
* Support RTL language direction
* Apply factor on domain parser
* Use tab name in CSV Export/Import
* Add bus management
* Load custom CSS and Javascript
* New icons
* Support timestamp field
* Validate dictionary items
* Add (i)like support to domain inversion
* Improve loading strategy by using views
* Add support of width attribute on tree view
* Use non conflicting keyboard shortcuts
* Use the context to get the suffix of window name
* Call on_change methods after setting default dtstart on calendar view
* Allow to open in new tab Many2One and Reference with CTRL key
* Store session in browser storage
* Increase the space available for tab list
* Allow to toggle menu on large screen
* Manage URL and history

* BUG#10127 Clean session if local session is wrong and we got an ir.session error
* BUG#10098 Allow list view when Ctrl+click
* BUG#9909 Autorefresh modal codeMirror using addon
* BUG#9960 Correctly set operand for M2M and O2M size_limt
* BUG#9293 Add linting to rule algorithms
* BUG#9680 Remove text color change on dropdown menu when hover element
* BUG#9678 Set default color on btn-primary
* BUG#9457 Apply factor on domain parser
* BUG#9504 Load CodeMiror inside Docker
* BUG#9468 Fix file extension missing when using excel export from tree view
* BUG#9467 Display total sum of commission
* BUG#9446 Only set width 100 to inputfrom inside dict
* BUG#8756 Only open link when using ctrl key
* BUG#9035 Remove checkbox for always ignoring warnings
* FEA#8271 Add support of expand attribute on group tag
* FEA#8785 Change title to Coog in the Sao browser
* FEA#7941 Add keyword attribute to button tag