@@ -1,3 +1,5 @@
+* Display unread and total of notes
+* Use resources method
 * Reduce offset when no search result
 * Use tab name in CSV Export/Import
 * Add support for plugins
